--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -2,6 +2,8 @@
 <resources>
     <color name="shadow">#8A8A8A</color>
     <color name="stroke">#404040</color>
+    <color name="drawerBackground">#272727</color>
+    <color name="drawerDivider">#1A1A1A</color>
     <color name="trans">#80FFFFFF</color>
     <color name="theGray">#999999</color>
 
