--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -7,4 +7,4 @@
     android:dividerHeight="1dp"
     android:background="@color/drawerBackground"
     tools:context=".NavigationDrawerFragment"
-    android:id="@+id/" />
+    android:id="@+id/drawer_list" />
