--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -115,6 +115,30 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/sub_menu_container"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        android:visibility="invisible" >
+
+        <ImageView
+            android:id="@+id/main_menu_holder"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="end"
+            android:clickable="true" />
+
+        <ListView
+            android:id="@+id/sub_menu_list"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:background="@color/white" />
+
+    </LinearLayout>
+
     <FrameLayout android:id="@+id/progress_container"
         android:background="@color/trans"
         android:layout_width="match_parent"
