--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -20,6 +20,10 @@
         android:id="@+id/facilitiesFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+    <fragment android:name="com.techhab.collegeapp.CafeteriaFragment"
+        android:id="@+id/cafeteriaFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
     <fragment android:name="com.techhab.collegeapp.CalenderFragment"
         android:id="@+id/calenderFragment"
         android:layout_width="match_parent"
