--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -3,8 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:choiceMode="singleChoice"
-    android:divider="@color/drawerDivider"
-    android:dividerHeight="1dp"
+    android:divider="@null"
     android:background="@color/drawerBackground"
     tools:context=".NavigationDrawerFragment"
     android:id="@+id/drawer_list" />
+
+
