--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -1,11 +1,50 @@
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:choiceMode="singleChoice"
-    android:divider="@null"
-    android:background="@color/drawerBackground"
-    tools:context=".NavigationDrawerFragment"
-    android:id="@+id/drawer_list" />
+    android:orientation="vertical"
+    tools:context=".NavigationDrawerFragment" >
+
+    <!-- a separate section to go above the list -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:orientation="horizontal">
+
+        <!-- your image, you can set it later (see NavDrawerFrag) -->
+        <ImageView
+            android:id="@+id/nav_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="15dp"
+            android:src="@android:drawable/ic_menu_myplaces"/>
+
+        <!-- a bit of test or a title to go with it -->
+        <TextView
+            android:id="@+id/nav_text"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:text="Default text"/>
+
+    </LinearLayout>
+
+    <!-- some divider thing -->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:padding="20dp"
+        android:background="#000000"/>
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:choiceMode="singleChoice"
+        android:divider="@null"
+        android:background="@color/drawerBackground"
+        android:id="@+id/drawer_list" />
 
 
+</LinearLayout>
