--- a/app/src/main/res/layout/custom_row.xml
+++ b/app/src/main/res/layout/custom_row.xml
@@ -7,11 +7,10 @@
 
 
     <ImageView
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:layout_marginTop="11dp"
-        android:layout_marginLeft="11dp" />
+        android:padding="13dp" />
 
     <TextView
         android:layout_width="match_parent"
