--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,11 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <fragment android:name="com.techhab.collegeapp.LoggedOutHomeFragment"
+    <fragment android:name="com.techhab.collegeapp.LogInFragment"
         android:id="@+id/loggedOutHomeFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout="@layout/fragment_logged_out_home" />
+        tools:layout="@layout/fragment_log_in" />
 
     <fragment android:name="com.techhab.collegeapp.HomeFragment"
         android:id="@+id/homeFragment"
