--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -17,9 +17,9 @@
         <!-- your image, you can set it later (see NavDrawerFrag) -->
         <ImageView
             android:id="@+id/nav_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="15dp"
+            android:layout_width="52dp"
+            android:layout_height="52dp"
+            android:padding="12dp"
             android:src="@drawable/account"/>
 
         <!-- a bit of test or a title to go with it -->
@@ -36,7 +36,8 @@
                 android:layout_height="0dp"
                 android:textColor="@color/theGray"
                 android:gravity="center_vertical"
-                android:text="Logged in as"/>
+                android:textStyle="bold"
+                android:text="Griffin Smalley"/>
 
             <TextView
                 android:id="@+id/user_name"
@@ -44,7 +45,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/theGray"
                 android:gravity="center_vertical"
-                android:text="GRIFFIN SMALLEY"/>
+                android:text="k13gs03@kzoo.edu" />
 
         </LinearLayout>
 
@@ -64,6 +65,13 @@
         android:divider="@null"
         android:background="@color/drawerBackground"
         android:id="@+id/drawer_list" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:padding="20dp"
+        android:background="@color/drawerDivider" />
+
 
 
 </LinearLayout>
