--- a/app/src/main/res/layout/nav_row.xml
+++ b/app/src/main/res/layout/nav_row.xml
@@ -7,14 +7,14 @@
 
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/nav_drawer_icon_width"
+        android:layout_height="@dimen/nav_drawer_icon_height"
         android:id="@+id/imageView"
-        android:padding="13dp" />
+        android:padding="12dp" />
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="52dp"
+        android:layout_height="@dimen/nav_row_height"
         android:gravity="center|start"
         android:textColor="@color/theGray"
         android:textAppearance="?android:attr/textAppearanceSmall"
