--- a/app/src/main/res/layout/fragment_logged_out_home.xml
+++ b/app/src/main/res/layout/fragment_logged_out_home.xml
@@ -2,19 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.techhab.collegeapp.LogInFragment">
+    tools:context="com.techhab.collegeapp.LoggedOutHomeFragment">
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:gravity="center"
         android:orientation="vertical" >
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/k_login_header"
-            android:layout_gravity="center_horizontal"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
