--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,135 +7,152 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:orientation="vertical" >
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:layout_marginBottom="@dimen/icon_vertical_margin"
-            android:orientation="horizontal" >
-
-            <ImageView
-                android:id="@+id/main_menu_00"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:layout_marginRight="@dimen/icon_horizontal_margin"
-                android:layout_marginEnd="@dimen/icon_horizontal_margin"
-                android:gravity="center"
-                android:contentDescription="@string/content_description"
-                android:src="@drawable/money"
-                android:clickable="true" />
-
-            <ImageView
-                android:id="@+id/main_menu_01"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:layout_marginLeft="@dimen/icon_horizontal_margin"
-                android:layout_marginStart="@dimen/icon_horizontal_margin"
-                android:gravity="center"
-                android:contentDescription="@string/content_description"
-                android:src="@drawable/graph"
-                android:clickable="true" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:layout_marginTop="@dimen/icon_vertical_margin"
-            android:layout_marginBottom="@dimen/icon_vertical_margin"
-            android:orientation="horizontal" >
-
-            <ImageView
-                android:id="@+id/main_menu_10"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:layout_marginRight="@dimen/icon_horizontal_margin"
-                android:layout_marginEnd="@dimen/icon_horizontal_margin"
-                android:gravity="center"
-                android:contentDescription="@string/content_description"
-                android:src="@drawable/docs"
-                android:clickable="true" />
-
-            <ImageView
-                android:id="@+id/main_menu_11"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:layout_marginLeft="@dimen/icon_horizontal_margin"
-                android:layout_marginStart="@dimen/icon_horizontal_margin"
-                android:gravity="center"
-                android:contentDescription="@string/content_description"
-                android:src="@drawable/location"
-                android:clickable="true" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:layout_marginTop="@dimen/icon_vertical_margin"
-            android:orientation="horizontal" >
-
-            <ImageView
-                android:id="@+id/main_menu_20"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:layout_marginRight="@dimen/icon_horizontal_margin"
-                android:layout_marginEnd="@dimen/icon_horizontal_margin"
-                android:gravity="center"
-                android:contentDescription="@string/content_description"
-                android:src="@drawable/payments"
-                android:clickable="true" />
-
-            <ImageView
-                android:id="@+id/main_menu_21"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:layout_marginLeft="@dimen/icon_horizontal_margin"
-                android:layout_marginStart="@dimen/icon_horizontal_margin"
-                android:gravity="center"
-                android:contentDescription="@string/content_description"
-                android:src="@drawable/dots"
-                android:clickable="true" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/sub_menu_container"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical"
-        android:visibility="invisible" >
-
         <ImageView
-            android:id="@+id/main_menu_holder"
             android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="end"
-            android:clickable="true" />
+            android:layout_height="wrap_content"
+            android:src="@drawable/banner"
+            android:layout_gravity="top"
+            android:id="@+id/bannerImage" />
 
-        <ListView
-            android:id="@+id/sub_menu_list"
+        <FrameLayout
             android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2"
-            android:background="@color/white" />
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:orientation="vertical" >
+
+
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:layout_marginBottom="@dimen/icon_vertical_margin"
+                    android:orientation="horizontal" >
+
+                    <ImageView
+                        android:id="@+id/main_menu_00"
+                        android:layout_width="0dp"
+                        android:layout_height="fill_parent"
+                        android:layout_weight="1"
+                        android:layout_marginRight="@dimen/icon_horizontal_margin"
+                        android:layout_marginEnd="@dimen/icon_horizontal_margin"
+                        android:gravity="center"
+                        android:contentDescription="@string/content_description"
+                        android:src="@drawable/money"
+                        android:clickable="true" />
+
+                    <ImageView
+                        android:id="@+id/main_menu_01"
+                        android:layout_width="0dp"
+                        android:layout_height="fill_parent"
+                        android:layout_weight="1"
+                        android:layout_marginLeft="@dimen/icon_horizontal_margin"
+                        android:layout_marginStart="@dimen/icon_horizontal_margin"
+                        android:gravity="center"
+                        android:contentDescription="@string/content_description"
+                        android:src="@drawable/graph"
+                        android:clickable="true" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:layout_marginTop="@dimen/icon_vertical_margin"
+                    android:layout_marginBottom="@dimen/icon_vertical_margin"
+                    android:orientation="horizontal" >
+
+                    <ImageView
+                        android:id="@+id/main_menu_10"
+                        android:layout_width="0dp"
+                        android:layout_height="fill_parent"
+                        android:layout_weight="1"
+                        android:layout_marginRight="@dimen/icon_horizontal_margin"
+                        android:layout_marginEnd="@dimen/icon_horizontal_margin"
+                        android:gravity="center"
+                        android:contentDescription="@string/content_description"
+                        android:src="@drawable/docs"
+                        android:clickable="true" />
+
+                    <ImageView
+                        android:id="@+id/main_menu_11"
+                        android:layout_width="0dp"
+                        android:layout_height="fill_parent"
+                        android:layout_weight="1"
+                        android:layout_marginLeft="@dimen/icon_horizontal_margin"
+                        android:layout_marginStart="@dimen/icon_horizontal_margin"
+                        android:gravity="center"
+                        android:contentDescription="@string/content_description"
+                        android:src="@drawable/location"
+                        android:clickable="true" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:layout_marginTop="@dimen/icon_vertical_margin"
+                    android:orientation="horizontal" >
+
+                    <ImageView
+                        android:id="@+id/main_menu_20"
+                        android:layout_width="0dp"
+                        android:layout_height="fill_parent"
+                        android:layout_weight="1"
+                        android:layout_marginRight="@dimen/icon_horizontal_margin"
+                        android:layout_marginEnd="@dimen/icon_horizontal_margin"
+                        android:gravity="center"
+                        android:contentDescription="@string/content_description"
+                        android:src="@drawable/payments"
+                        android:clickable="true" />
+
+                    <ImageView
+                        android:id="@+id/main_menu_21"
+                        android:layout_width="0dp"
+                        android:layout_height="fill_parent"
+                        android:layout_weight="1"
+                        android:layout_marginLeft="@dimen/icon_horizontal_margin"
+                        android:layout_marginStart="@dimen/icon_horizontal_margin"
+                        android:gravity="center"
+                        android:contentDescription="@string/content_description"
+                        android:src="@drawable/dots"
+                        android:clickable="true" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/sub_menu_container"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:orientation="vertical"
+                android:visibility="invisible" >
+
+                <ImageView
+                    android:id="@+id/main_menu_holder"
+                    android:layout_width="fill_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="end"
+                    android:clickable="true" />
+
+                <ListView
+                    android:id="@+id/sub_menu_list"
+                    android:layout_width="fill_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="2"
+                    android:background="@color/white" />
+
+            </LinearLayout>
+        </FrameLayout>
 
     </LinearLayout>
 
