--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -1,10 +1,69 @@
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:choiceMode="singleChoice"
-    android:divider="@color/drawerDivider"
-    android:dividerHeight="1dp"
-    android:background="@color/drawerBackground"
-    tools:context=".NavigationDrawerFragment"
-    android:id="@+id/drawer_list" />
+    android:orientation="vertical"
+    tools:context=".NavigationDrawerFragment" >
+
+    <!-- a separate section to go above the list -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:background="@color/drawerBackground"
+        android:id="@+id/profile_layout"
+        android:orientation="horizontal">
+
+        <!-- your image, you can set it later (see NavDrawerFrag) -->
+        <ImageView
+            android:id="@+id/nav_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="15dp"
+            android:src="@drawable/account"/>
+
+        <!-- a bit of test or a title to go with it -->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center_vertical">
+
+            <TextView
+                android:id="@+id/nav_text"
+                android:layout_width="wrap_content"
+                android:layout_weight="1"
+                android:layout_height="0dp"
+                android:textColor="@color/theGray"
+                android:gravity="center_vertical"
+                android:text="Logged in as"/>
+
+            <TextView
+                android:id="@+id/user_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/theGray"
+                android:gravity="center_vertical"
+                android:text="GRIFFIN SMALLEY"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <!-- divider -->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:padding="20dp"
+        android:background="@color/drawerDivider"/>
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:choiceMode="singleChoice"
+        android:divider="@null"
+        android:background="@color/drawerBackground"
+        android:id="@+id/drawer_list" />
+
+
+</LinearLayout>
