--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,5 +20,8 @@
     <dimen name="nav_drawer_icon_height">52dp</dimen>
     <dimen name="nav_row_height">52dp</dimen>
 
+    <!-- Action Bar -->
+    <dimen name="actionbar_height">?android:attr/actionBarSize</dimen>
+
 
 </resources>
