--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -7,6 +7,7 @@
     <color name="trans">#80FFFFFF</color>
     <color name="theGray">#999999</color>
     <color name="navDrawerIcon">#999999</color>
+    <color name="kzooOrange">#E27226</color>
 
     <color name="white">#FFFFFF</color>
     <color name="yellow">#FFFF00</color>
