--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -2,4 +2,19 @@
 <resources>
     <style name="AppTheme" parent="android:Theme.Material.Light">
     </style>
+
+    <style name="Theme.Test" parent="@style/Theme.AppCompat.Light">
+
+        <!-- customize the color palette -->
+        <item name="colorPrimary">#F00000</item>
+        <item name="colorPrimaryDark">#F00000</item>
+        <item name="colorAccent">#F80000</item>
+        <item name="windowActionBar">false</item>
+        <item name="drawerArrowStyle">@style/Theme.Test.DrawerArrowStyle</item>
+    </style>
+
+    <style name="Theme.Test.DrawerArrowStyle" parent="@style/Widget.AppCompat.DrawerArrowToggle">
+        <item name="spinBars">true</item>
+        <item name="color">@android:color/white</item>
+    </style>
 </resources>
