--- a/app/src/main/res/layout/activity_academic.xml
+++ b/app/src/main/res/layout/activity_academic.xml
@@ -1,33 +1,60 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.techhab.collegeapp.AcademicActivity" >
+    android:fitsSystemWindows="true">
 
-    <!-- The main content view -->
-    <FrameLayout
-        android:id="@+id/content_frame"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <!--
-    <fragment android:name="com.techhab.collegeapp.LogInFragment"
-        android:id="@+id/loggedOutHomeFragment"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout="@layout/fragment_log_in" />
-        -->
+        android:orientation="vertical">
 
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/expanded_toolbar"
+            android:minHeight="@dimen/abc_action_bar_default_height_material"
+            android:background="@drawable/k_banner_fab"
+            app:theme="@style/Toolbar"
+            app:popupTheme="@style/Theme.AppCompat.Light" >
+
+                <android.support.v7.widget.SlidingTabLayout
+                    android:id="@+id/sliding_tabs"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom" />
+
+        </android.support.v7.widget.Toolbar>
+
+
+        <!-- The main content view -->
+        <android.support.v4.view.ViewPager
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <fragment android:name="com.techhab.collegeapp.CoursesFragment"
+                android:id="@+id/coursesFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <fragment android:name="com.techhab.collegeapp.CalendarFragment"
+                android:id="@+id/calendarFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </android.support.v4.view.ViewPager>
+
+    </LinearLayout>
 
     <!--Navigation Drawer-->
-    <!--
     <fragment android:id="@+id/home_navigation_drawer"
         android:layout_width="@dimen/navigation_drawer_width"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:name="com.techhab.collegeapp.NavigationDrawerFragment" />
-    -->
 
 </android.support.v4.widget.DrawerLayout>
-
