--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -2,52 +2,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/drawerBackground"
     android:orientation="vertical"
     tools:context=".NavigationDrawerFragment" >
 
-    <!-- a separate section to go above the list -->
+    <ImageView
+        android:id="@+id/nav_image"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:padding="12dp"
+        android:src="@drawable/account"/>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:background="@color/drawerBackground"
+        android:layout_height="56dp"
+        android:layout_marginLeft="16dp"
         android:id="@+id/profile_layout"
-        android:orientation="horizontal">
+        android:layout_gravity="center_vertical"
+        android:orientation="vertical">
 
-        <!-- your image, you can set it later (see NavDrawerFrag) -->
-        <ImageView
-            android:id="@+id/nav_image"
-            android:layout_width="52dp"
-            android:layout_height="52dp"
-            android:padding="12dp"
-            android:src="@drawable/account"/>
+        <RelativeLayout
+            android:id="@+id/text_view_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <!-- a bit of test or a title to go with it -->
-        <LinearLayout
+        <TextView
+            android:id="@+id/nav_user_name"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:textSize="14sp"
+            android:textColor="@color/theGray"
+            android:gravity="center_vertical"
+            android:textStyle="bold"
+            android:text="Griffin Smalley"/>
+
+        <TextView
+            android:id="@+id/user_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center_vertical">
+            android:textColor="@color/theGray"
+            android:layout_below="@+id/nav_user_name"
+            android:textSize="14sp"
+            android:gravity="center_vertical"
+            android:text="k13gs03@kzoo.edu" />
 
-            <TextView
-                android:id="@+id/nav_text"
-                android:layout_width="wrap_content"
-                android:layout_weight="1"
-                android:layout_height="0dp"
-                android:textColor="@color/theGray"
-                android:gravity="center_vertical"
-                android:textStyle="bold"
-                android:text="Griffin Smalley"/>
-
-            <TextView
-                android:id="@+id/user_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/theGray"
-                android:gravity="center_vertical"
-                android:text="k13gs03@kzoo.edu" />
-
-        </LinearLayout>
+        </RelativeLayout>
 
     </LinearLayout>
 
@@ -56,6 +55,8 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:padding="20dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@color/drawerDivider"/>
 
     <ListView
