--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,9 +3,9 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
-    <!-- Per the design guidelines, navigation drawers should be between 240dp and 320dp:
-         https://developer.android.com/design/patterns/navigation-drawer.html -->
-    <dimen name="navigation_drawer_width">240dp</dimen>
+    <!-- Per the Material design guidelines, navigation drawers should be (screen width - action bar height) wide:
+         http://www.google.com/design/spec/patterns/navigation-drawer.html -->
+    <dimen name="navigation_drawer_width">320dp</dimen>
 
     <!-- Icon margins -->
     <dimen name="icon_horizontal_margin">8dp</dimen>
@@ -16,8 +16,7 @@
     <dimen name="login_height">32dp</dimen>
 
     <!-- Nav Drawer -->
-    <dimen name="nav_drawer_icon_width">52dp</dimen>
-    <dimen name="nav_drawer_icon_height">52dp</dimen>
+    <dimen name="nav_drawer_icon">24dp</dimen>
     <dimen name="nav_row_height">52dp</dimen>
 
     <!-- Action Bar -->
