--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -17,6 +17,9 @@
     <color name="main20">#E23E26</color>
     <color name="main21">#E23126</color>
 
+    <!-- Sliding Tab Strip -->
+    <color name="background_tab_pressed">#6633B5E5</color>
+
     <color name="white">#FFFFFF</color>
     <color name="yellow">#FFFF00</color>
     <color name="fuchsia">#FF00FF</color>
