Continued reworking of nav drawer

--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -24,13 +24,15 @@
         <RelativeLayout
             android:id="@+id/text_view_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical">
 
         <TextView
             android:id="@+id/nav_user_name"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:textSize="14sp"
+            android:layout_alignParentTop="true"
             android:textColor="@color/theGray"
             android:gravity="center_vertical"
             android:textStyle="bold"
@@ -61,17 +63,79 @@
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:choiceMode="singleChoice"
         android:divider="@null"
         android:background="@color/drawerBackground"
         android:id="@+id/drawer_list" />
 
+    <!-- Settings and support -->
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="bottom">
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:padding="20dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@color/drawerDivider" />
+
+    <LinearLayout android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:orientation="horizontal" >
+
+
+        <ImageView
+            android:layout_width="@dimen/nav_drawer_icon"
+            android:layout_height="@dimen/nav_drawer_icon"
+            android:layout_gravity="center_vertical"
+            android:id="@+id/settings_icon"
+            android:src="@drawable/cog"
+            android:layout_marginLeft="16dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:textColor="@color/theGray"
+            android:textSize="14sp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:id="@+id/settings_text"
+            android:text="@string/action_settings"
+            android:layout_marginLeft="32dp" />
+    </LinearLayout>
+
+    <LinearLayout android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:orientation="horizontal" >
+
+
+        <ImageView
+            android:layout_width="@dimen/nav_drawer_icon"
+            android:layout_height="@dimen/nav_drawer_icon"
+            android:layout_gravity="center_vertical"
+            android:id="@+id/support_icon"
+            android:src="@drawable/help_circle"
+            android:layout_marginLeft="16dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:textColor="@color/theGray"
+            android:textSize="14sp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:id="@+id/support_text"
+            android:text="@string/support"
+            android:layout_marginLeft="32dp" />
+    </LinearLayout>
+
+    </LinearLayout>
 
 
 
