updated sliding tab

--- a/app/src/main/res/layout/activity_academic.xml
+++ b/app/src/main/res/layout/activity_academic.xml
@@ -24,6 +24,7 @@
                 android:layout_gravity="bottom"
                 android:scrollbars="none"
                 android:fillViewport="true"
+                android:clipToPadding="false"
                 app:pstsPaddingMiddle="true" />
 
         </FrameLayout>
